--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "grunt-cli": "1.2.0",
     "highlight.js": "9.12.0",
     "html-loader": "0.5.1",
+    "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
     "lodash": "4.17.4",
     "node-sass": "4.5.3",
