--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "components.js",
   "scripts": {
     "compileCss": "grunt compileCss",
-    "build": "grunt build",
+    "build": "grunt compileCss build",
     "start": "grunt start"
   },
   "dependencies": {
