--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "compileCss": "grunt compileCss",
     "build": "grunt compileCss build",
-    "start": "grunt start"
+    "start": "grunt start",
+    "deploy": "now"
   },
   "dependencies": {
     "classnames": "2.2.5",
