--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "private": true,
   "description": "Elastic UI Component Library",
   "version": "0.0.1",
-  "main": "dist/eui",
+  "main": "dist/eui.js",
+  "module": "src/components/index.js",
+  "jsnext:main": "src/components/index.js",
+  "browser": "dist/eui.min.js",
   "scripts": {
     "start": "./build/scripts/docs-dev.sh",
     "build": "./build/scripts/compile-clean.sh && ./build/scripts/compile-scss.sh && ./build/scripts/compile-eui.sh",
