Fixes to running the style guide

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "jsnext:main": "src/components/index.js",
   "browser": "dist/eui.min.js",
   "scripts": {
-    "start": "./build/scripts/docs-dev.sh",
+    "start": "./build/scripts/compile-scss.sh && ./build/scripts/docs-dev.sh",
     "build": "./build/scripts/compile-clean.sh && ./build/scripts/compile-scss.sh && ./build/scripts/compile-eui.sh",
     "deploy": "now --public",
     "now-build": "./build/scripts/compile-scss.sh && ./build/scripts/docs-build.sh",
