--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@elastic/eui",
   "description": "Elastic UI Component Library",
   "version": "0.0.1",
-  "main": "lib/components/index.js",
-  "module": "src/components/index.js",
-  "jsnext:main": "src/components/index.js",
+  "main": "lib",
+  "module": "src",
+  "jsnext:main": "src",
   "browser": "dist/eui.min.js",
   "scripts": {
     "start": "./build/scripts/docs-dev.sh",
@@ -23,7 +23,6 @@
     "focus-trap-react": "3.0.4",
     "html": "1.0.0",
     "keymirror": "0.1.1",
-    "postcss-inline-svg": "^3.0.0",
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-router": "3.2.0",
@@ -53,6 +52,7 @@
     "node-sass": "4.5.3",
     "npm-run": "4.1.2",
     "postcss-cli": "^4.1.1",
+    "postcss-inline-svg": "^3.0.0",
     "postcss-loader": "2.0.8",
     "raw-loader": "0.5.1",
     "react-dom": "16.0.0",
