--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "./build/scripts/compile-clean.sh && ./build/scripts/compile-scss.sh && ./build/scripts/compile-eui.sh",
     "deploy": "now --public",
     "now-build": "./build/scripts/compile-scss.sh && ./build/scripts/docs-build.sh",
-    "now-start": "serve docs/build"
+    "now-start": "serve docs/build",
+    "test": "./build/scripts/test.sh"
   },
   "now": {
     "name": "elastic-eui",
@@ -19,6 +20,7 @@
   "dependencies": {
     "classnames": "2.2.5",
     "core-js": "2.5.1",
+    "lodash": "4.17.4",
     "focus-trap-react": "3.0.4",
     "html": "1.0.0",
     "keymirror": "0.1.1",
@@ -26,7 +28,8 @@
     "react": "16.0.0",
     "react-router": "3.2.0",
     "serve": "^6.3.1",
-    "tabbable": "1.1.0"
+    "tabbable": "1.1.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.5",
@@ -42,12 +45,16 @@
     "css-loader": "0.28.7",
     "enzyme": "3.1.0",
     "enzyme-adapter-react-16": "1.0.2",
+    "eslint": "4.9.0",
+    "eslint-config-airbnb": "16.1.0",
+    "eslint-plugin-import": "2.8.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0",
     "file-loader": "1.1.5",
     "highlight.js": "9.12.0",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "21.2.1",
-    "lodash": "4.17.4",
     "node-sass": "4.5.3",
     "npm-run": "4.1.2",
     "postcss-cli": "^4.1.1",
