--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-router": "3.2.0",
-    "serve": "^6.3.1",
+    "serve": "6.3.1",
     "tabbable": "1.1.0",
-    "uuid": "^3.1.0"
+    "uuid": "3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "7.1.5",
@@ -55,12 +55,12 @@
     "file-loader": "1.1.5",
     "highlight.js": "9.12.0",
     "html-loader": "0.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "2.30.1",
     "jest": "21.2.1",
     "node-sass": "4.5.3",
     "npm-run": "4.1.2",
-    "postcss-cli": "^4.1.1",
-    "postcss-inline-svg": "^3.0.0",
+    "postcss-cli": "4.1.1",
+    "postcss-inline-svg": "3.0.0",
     "postcss-loader": "2.0.8",
     "raw-loader": "0.5.1",
     "react-dom": "16.0.0",
@@ -75,6 +75,6 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.2",
     "yeoman-generator": "2.0.1",
-    "yo": "^2.0.0"
+    "yo": "2.0.0"
   }
 }
