Kibana linting rules (#63)
* move scripts and generator
* build docs into docs/dist
* Add kibana linting rules.
* Reconstruct refactored scripts.
* Add lint-fix script, and make lint script not apply fixes.

--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,23 +1,21 @@
 {
   "presets": [
     ["env", {
-      targets: {
-        browsers: [
-          'last 2 versions',
-          '> 5%',
-          'Safari 7' // for PhantomJS support
+      "targets": {
+        "browsers": [
+          "last 2 versions",
+          "> 5%",
+          "Safari 7"
         ]
       },
-      useBuiltIns: true
+      "useBuiltIns": true
     }],
     "react"
   ],
   "plugins": [
     "add-module-exports",
-    // stage 3
     "transform-async-generator-functions",
     "transform-object-rest-spread",
-    // stage 2
     "transform-class-properties"
   ]
 }
