--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "./scripts/lint.sh",
     "lint-fix": "./scripts/lint-fix.sh",
     "test": "./scripts/test.sh",
+    "test-unit": "./scripts/test-unit.sh",
     "yo-component": "yo ./generator-eui/app/component.js",
     "yo-doc": "yo ./generator-eui/app/documentation.js",
     "deploy": "now --public"
@@ -38,6 +39,8 @@
     "@elastic/eslint-config-kibana": "0.13.0",
     "autoprefixer": "7.1.5",
     "babel-cli": "6.26.0",
+    "babel-eslint": "8.0.1",
+    "babel-jest": "21.0.0",
     "babel-loader": "7.1.2",
     "babel-plugin-add-module-exports": "0.2.1",
     "babel-plugin-transform-async-generator-functions": "6.24.1",
@@ -49,6 +52,7 @@
     "css-loader": "0.28.7",
     "enzyme": "3.1.0",
     "enzyme-adapter-react-16": "1.0.2",
+    "enzyme-to-json": "3.1.4",
     "eslint": "4.9.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.8.0",
@@ -56,11 +60,14 @@
     "eslint-plugin-mocha": "4.11.0",
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-react": "7.4.0",
+    "enzyme-to-json": "3.1.4",
     "file-loader": "1.1.5",
     "highlight.js": "9.12.0",
     "html-loader": "0.5.1",
     "html-webpack-plugin": "2.30.1",
     "jest": "21.2.1",
+    "jest-cli": "21.2.1",
+    "lodash": "4.17.4",
     "node-sass": "4.5.3",
     "npm-run": "4.1.2",
     "postcss-cli": "4.1.1",
@@ -74,6 +81,7 @@
     "redux": "3.7.2",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
+    "sinon": "4.0.1",
     "style-loader": "0.19.0",
     "svg-sprite-loader": "3.3.1",
     "webpack": "3.8.1",
