Improve KuiContextMenu keyboard navigation UX (#44)
* Improve KuiContextMenu keyboard navigation UX
* Refactor focus state logic to use the React lifecycle correctly.
* Update KuiPopover snapshots.
* Remove unnecessary isVisible prop from KuiContextMenu.
* Allow user to both tab AND use the arrow keys for navigation.
* Reinstate ability to tab and shift-tab to the title of KuiContextMenuPanel.
* Release focus from Dashboard panel options KuiContextMenu by closing it when you select an option.
* Update KuiContextMenu example to demonstrate best practice of closing the menu when an item is clicked.
* Replace native transitionend event handler with onAnimationEnd React event handler.
* Improve logic for tabbing through a ContextMenuPanel's form elements.
- Support left arrow going back when the panel itself is focused.
[UI Framework] Fix Popover and ContextMenu bugs.
* Rename KuiPopover isFocusable prop to ownFocus. Focus on first focusable element by default.
* Fix bug where ContextMenuPanel keyboard navigation broke if the user was using tab instead of arrow keys.
* Move jest dir into scripts dir. Update snapshots and fix test warnings.

--- a/scripts/jest/config.json
+++ b/scripts/jest/config.json
@@ -13,12 +13,12 @@
     "!src/services/**/*/index.js"
   ],
   "moduleNameMapper": {
-    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/build/jest/mocks/file_mock.js",
-    "\\.(css|less|scss)$": "<rootDir>/build/jest/mocks/style_mock.js"
+    "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/scripts/jest/mocks/file_mock.js",
+    "\\.(css|less|scss)$": "<rootDir>/scripts/jest/mocks/style_mock.js"
   },
   "setupFiles": [
-    "<rootDir>/build/jest/setup/request_animation_frame_polyfill.js",
-    "<rootDir>/build/jest/setup/enzyme.js"
+    "<rootDir>/scripts/jest/setup/request_animation_frame_polyfill.js",
+    "<rootDir>/scripts/jest/setup/enzyme.js"
   ],
   "coverageDirectory": "<rootDir>/reports/jest-coverage",
   "coverageReporters": [
@@ -32,7 +32,7 @@
     "**/*.test.js"
   ],
   "testPathIgnorePatterns": [
-    "<rootDir>/build/",
+    "<rootDir>/scripts/",
     "<rootDir>/docs/",
     "<rootDir>/node_modules/"
   ],
