--- a/package.json
+++ b/package.json
@@ -60,7 +60,6 @@
     "eslint-plugin-mocha": "4.11.0",
     "eslint-plugin-prefer-object-spread": "1.2.1",
     "eslint-plugin-react": "7.4.0",
-    "enzyme-to-json": "3.1.4",
     "file-loader": "1.1.5",
     "highlight.js": "9.12.0",
     "html-loader": "0.5.1",
@@ -73,6 +72,7 @@
     "postcss-cli": "4.1.1",
     "postcss-inline-svg": "3.0.0",
     "postcss-loader": "2.0.8",
+    "pre-commit": "1.2.2",
     "raw-loader": "0.5.1",
     "react-dom": "16.0.0",
     "react-redux": "5.0.6",
