--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
   "dependencies": {
     "classnames": "2.2.5",
     "core-js": "2.5.1",
-    "lodash": "4.17.4",
     "focus-trap-react": "3.0.4",
     "html": "1.0.0",
+    "jquery": "3.2.1",
     "keymirror": "0.1.1",
+    "lodash": "4.17.4",
     "prop-types": "15.6.0",
     "react": "16.0.0",
     "react-router": "3.2.0",
