Fix linter. Run it in precommit hook. Fix linting errors. (#154)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,14 @@
 {
+  "settings": {
+    "import/resolver": {
+       "node": {
+        "extensions": [".js"]
+      },
+      "webpack": {
+        "config": "./src-docs/webpack.config.js"
+      }
+    }
+  },
   "extends": "@elastic/eslint-config-kibana",
   "env": {
     "jest": true
