--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "enzyme-adapter-react-16": "1.0.2",
     "enzyme-to-json": "3.1.4",
     "eslint": "4.9.0",
+    "eslint-import-resolver-webpack": "0.8.3",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
