Use inline SVGs for icons (#160)
* Generate inline react components from SVGs during the build
* Remove svg-sprite-loader
* Don't apply a default title to icons

--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,17 @@
     "transform-async-generator-functions",
     "transform-object-rest-spread",
     // stage 2
-    "transform-class-properties"
+    "transform-class-properties",
+    [
+      "inline-react-svg",
+      {
+        "svgo": {
+          "plugins": [
+            { "cleanupIDs": false },
+            { "removeViewBox": false },
+          ]
+        }
+      }
+    ]
   ]
 }
