--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-jest": "21.0.0",
     "babel-loader": "7.1.2",
     "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-inline-react-svg": "0.5.2",
     "babel-plugin-transform-async-generator-functions": "6.24.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
@@ -84,7 +85,6 @@
     "sass-loader": "6.0.6",
     "sinon": "4.0.1",
     "style-loader": "0.19.0",
-    "svg-sprite-loader": "3.3.1",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.2",
     "yeoman-generator": "2.0.1",
