--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "keymirror": "0.1.1",
     "lodash": "4.17.4",
     "prop-types": "15.6.0",
-    "react": "16.0.0",
     "react-ace": "5.5.0",
-    "react-router": "3.2.0",
     "serve": "6.3.1",
     "tabbable": "1.1.0",
     "uuid": "3.1.0"
@@ -76,8 +74,10 @@
     "postcss-loader": "2.0.8",
     "pre-commit": "1.2.2",
     "raw-loader": "0.5.1",
+    "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-redux": "5.0.6",
+    "react-router": "3.2.0",
     "react-router-redux": "4.0.8",
     "react-test-renderer": "16.0.0",
     "redux": "3.7.2",
@@ -89,5 +89,8 @@
     "webpack-dev-server": "2.9.2",
     "yeoman-generator": "2.0.1",
     "yo": "2.0.0"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0-rc || ^16.0"
   }
 }
