--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "6.24.1",
     "chokidar": "1.7.0",
+    "circular-dependency-plugin": "4.3.0",
     "css-loader": "0.28.7",
     "enzyme": "3.1.0",
     "enzyme-adapter-react-16": "1.0.2",
