--- a/package.json
+++ b/package.json
@@ -20,78 +20,78 @@
     "release": "./scripts/release.sh"
   },
   "dependencies": {
-    "brace": "0.10.0",
-    "classnames": "2.2.5",
-    "core-js": "2.5.1",
-    "focus-trap-react": "3.0.4",
-    "highlight.js": "9.12.0",
-    "html": "1.0.0",
-    "jquery": "3.2.1",
-    "keymirror": "0.1.1",
-    "lodash": "4.17.4",
-    "prop-types": "15.6.0",
-    "react-ace": "5.5.0",
-    "serve": "6.3.1",
-    "tabbable": "1.1.0",
-    "uuid": "3.1.0"
+    "brace": "^0.10.0",
+    "classnames": "^2.2.5",
+    "core-js": "^2.5.1",
+    "focus-trap-react": "^3.0.4",
+    "highlight.js": "^9.12.0",
+    "html": "^1.0.0",
+    "jquery": "^3.2.1",
+    "keymirror": "^0.1.1",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.6.0",
+    "react-ace": "^5.5.0",
+    "serve": "^6.3.1",
+    "tabbable": "^1.1.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "@elastic/eslint-config-kibana": "0.13.0",
-    "@types/react": "16.0.31",
-    "autoprefixer": "7.1.5",
-    "babel-cli": "6.26.0",
-    "babel-eslint": "8.0.1",
-    "babel-jest": "21.0.0",
-    "babel-loader": "7.1.2",
-    "babel-plugin-add-module-exports": "0.2.1",
-    "babel-plugin-inline-react-svg": "0.5.2",
-    "babel-plugin-transform-async-generator-functions": "6.24.1",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-react": "6.24.1",
-    "chokidar": "1.7.0",
-    "circular-dependency-plugin": "4.3.0",
-    "css-loader": "0.28.7",
-    "enzyme": "3.1.0",
-    "enzyme-adapter-react-16": "1.0.2",
-    "enzyme-to-json": "3.1.4",
-    "eslint": "4.9.0",
-    "eslint-import-resolver-webpack": "0.8.3",
-    "eslint-plugin-babel": "4.1.2",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-mocha": "4.11.0",
-    "eslint-plugin-prefer-object-spread": "1.2.1",
-    "eslint-plugin-react": "7.4.0",
-    "file-loader": "1.1.5",
-    "html-loader": "0.5.1",
-    "html-webpack-plugin": "2.30.1",
-    "jest": "21.2.1",
-    "jest-cli": "21.2.1",
-    "lodash": "4.17.4",
-    "node-sass": "4.5.3",
-    "npm-run": "4.1.2",
-    "postcss-cli": "4.1.1",
-    "postcss-inline-svg": "3.0.0",
-    "postcss-loader": "2.0.8",
-    "pre-commit": "1.2.2",
-    "raw-loader": "0.5.1",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
-    "react-redux": "5.0.6",
-    "react-router": "3.2.0",
-    "react-router-redux": "4.0.8",
-    "react-test-renderer": "16.0.0",
-    "redux": "3.7.2",
-    "redux-thunk": "2.2.0",
-    "sass-loader": "6.0.6",
-    "sinon": "4.0.1",
-    "style-loader": "0.19.0",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.2",
-    "yeoman-generator": "2.0.1",
-    "yo": "2.0.0"
+    "@elastic/eslint-config-kibana": "^0.13.0",
+    "@types/react": "^16.0.31",
+    "autoprefixer": "^7.1.5",
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-jest": "^21.0.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-plugin-transform-async-generator-functions": "^6.24.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "chokidar": "^1.7.0",
+    "circular-dependency-plugin": "^4.3.0",
+    "css-loader": "^0.28.7",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "enzyme-to-json": "^3.1.4",
+    "eslint": "^4.9.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-react": "^7.4.0",
+    "file-loader": "^1.1.5",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "jest": "^21.2.1",
+    "jest-cli": "^21.2.1",
+    "lodash": "^4.17.4",
+    "node-sass": "^4.5.3",
+    "npm-run": "^4.1.2",
+    "postcss-cli": "^4.1.1",
+    "postcss-inline-svg": "^3.0.0",
+    "postcss-loader": "^2.0.8",
+    "pre-commit": "^1.2.2",
+    "raw-loader": "^0.5.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "react-router": "^3.2.0",
+    "react-router-redux": "^4.0.8",
+    "react-test-renderer": "^16.0.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "sinon": "^4.0.1",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.2",
+    "yeoman-generator": "^2.0.1",
+    "yo": "^2.0.0"
   },
   "peerDependencies": {
     "react": "^16.0.0-rc || ^16.0"
