--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
-    "@elastic/eslint-config-kibana": "^0.13.0",
+    "@elastic/eslint-config-kibana": "^0.15.0",
     "@types/react": "^16.0.31",
     "autoprefixer": "^7.1.5",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
-    "babel-jest": "^21.0.0",
+    "babel-jest": "^22.0.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-inline-react-svg": "^0.5.2",
@@ -51,6 +51,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chokidar": "^1.7.0",
+    "eslint-plugin-jest": "^21.6.2",
     "circular-dependency-plugin": "^4.3.0",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
@@ -67,8 +68,8 @@
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
-    "jest": "^21.2.1",
-    "jest-cli": "^21.2.1",
+    "jest": "^22.0.6",
+    "jest-cli": "^22.0.6",
     "lodash": "^4.17.4",
     "node-sass": "^4.5.3",
     "npm-run": "^4.1.2",
@@ -78,6 +79,7 @@
     "pre-commit": "^1.2.2",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
+    "react-color": "^2.13.8",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
