--- a/.babelrc
+++ b/.babelrc
@@ -14,6 +14,12 @@
   ],
   "plugins": [
     "add-module-exports",
+    [
+      "react-docgen",
+      {
+        "resolver": "findAllExportedComponentDefinitions"
+      }
+    ],
     // stage 3
     "transform-async-generator-functions",
     "transform-object-rest-spread",
