--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint-fix": "./scripts/lint-fix.sh",
     "test": "./scripts/test.sh",
     "test-unit": "./scripts/test-unit.sh",
+    "test-travis": "./scripts/test-travis.sh",
     "yo-component": "yo ./generator-eui/app/component.js",
     "yo-doc": "yo ./generator-eui/app/documentation.js",
     "release": "./scripts/release.sh"
