--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "moment": "2.13.0",
     "node-sass": "^4.5.3",
     "npm-run": "^4.1.2",
+    "pegjs": "^0.9.0",
     "postcss-cli": "^4.1.1",
     "postcss-inline-svg": "^3.0.0",
     "postcss-loader": "^2.0.8",
