--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-plugin-pegjs-inline-precompile": "^0.1.0",
     "babel-plugin-react-docgen": "^1.8.2",
     "babel-plugin-transform-async-generator-functions": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -77,7 +78,7 @@
     "moment": "2.13.0",
     "node-sass": "^4.5.3",
     "npm-run": "^4.1.2",
-    "pegjs": "^0.9.0",
+    "pegjs": "^0.10.0",
     "postcss-cli": "^4.1.1",
     "postcss-inline-svg": "^3.0.0",
     "postcss-loader": "^2.0.8",
