Convert scripts from shell to node. (#450)

--- a/package.json
+++ b/package.json
@@ -7,24 +7,26 @@
   "types": "src/index.d.ts",
   "jsnext:main": "src",
   "scripts": {
-    "start": "./scripts/docs-dev.sh",
+    "start": "webpack-dev-server --port 8030 --inline --hot --config=src-docs/webpack.config.js",
     "test-docker": "docker run --rm -i --user=$UID -e HOME=/tmp -v $(pwd):/app -w /app node:8 bash -c 'npm config set spin false && yarn && npm run test'",
-    "sync-docs": "./scripts/docs-sync.sh",
-    "build-docs": "./scripts/docs-build.sh",
-    "build": "./scripts/compile.sh",
-    "lint": "./scripts/lint.sh",
-    "lint-fix": "./scripts/lint-fix.sh",
-    "test": "./scripts/test.sh",
-    "test-unit": "./scripts/test-unit.sh",
+    "sync-docs": "node ./scripts/docs-sync.js",
+    "build-docs": "npm run build && webpack --config=src-docs/webpack.config.js",
+    "build": "node ./scripts/compile-clean.js && node ./scripts/compile-eui.js && node ./scripts/compile-scss.js",
+    "lint": "eslint --cache --ignore-pattern **/*.snap.js ./src/**/*.js ./src-docs/**/*.js",
+    "lint-fix": "eslint --fix --cache --ignore-pattern **/*.snap.js ./src/**/*.js ./src-docs/**/*.js",
+    "test": "npm run lint && npm run test-unit",
+    "test-unit": "jest --config ./scripts/jest/config.json",
     "yo-component": "yo ./generator-eui/app/component.js",
     "yo-doc": "yo ./generator-eui/app/documentation.js",
-    "release": "./scripts/release.sh"
+    "release": "npm test && npm run build && npm version patch && git push upstream --tags && npm publish && npm run sync-docs"
   },
   "dependencies": {
     "brace": "^0.10.0",
+    "chalk": "^2.3.1",
     "classnames": "^2.2.5",
     "core-js": "^2.5.1",
     "focus-trap-react": "^3.0.4",
+    "glob": "^7.1.2",
     "highlight.js": "^9.12.0",
     "html": "^1.0.0",
     "jquery": "^3.2.1",
@@ -34,7 +36,9 @@
     "prop-types": "^15.6.0",
     "react-ace": "^5.5.0",
     "react-color": "^2.13.8",
+    "rimraf": "^2.6.2",
     "serve": "^6.3.1",
+    "shelljs": "^0.8.1",
     "tabbable": "^1.1.0",
     "uuid": "^3.1.0"
   },
