--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "jsnext:main": "src",
   "scripts": {
     "start": "webpack-dev-server --port 8030 --inline --hot --config=src-docs/webpack.config.js",
-    "test-docker": "docker run --rm -i --user=$UID -e HOME=/tmp -v $(pwd):/app -w /app node:8 bash -c 'npm config set spin false && yarn && npm run test'",
+    "test-docker": "docker run --rm -i --user=$UID:$UID -e HOME=/tmp -v $(pwd):/app -w /app node:8 bash -c 'npm config set spin false && yarn && npm run test'",
     "sync-docs": "node ./scripts/docs-sync.js",
     "build-docs": "npm run build && webpack --config=src-docs/webpack.config.js",
     "build": "node ./scripts/compile-clean.js && node ./scripts/compile-eui.js && node ./scripts/compile-scss.js",
