Add support for loading images locally and inlining them if they're small. (#509)

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-react": "^7.4.0",
-    "file-loader": "^1.1.5",
+    "file-loader": "^1.1.11",
     "glob": "^7.1.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
@@ -100,6 +100,7 @@
     "shelljs": "^0.8.1",
     "sinon": "^4.0.1",
     "style-loader": "^0.19.0",
+    "url-loader": "^1.0.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.2",
     "yeoman-generator": "^2.0.1",
