Fix bug preventing svg images from being used in the docs. (#522)

--- a/.babelrc
+++ b/.babelrc
@@ -29,6 +29,7 @@
     [
       "inline-react-svg",
       {
+        "ignorePattern": "images/*",
         "svgo": {
           "plugins": [
             { "cleanupIDs": false },
