--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "yo-doc": "yo ./generator-eui/app/documentation.js",
     "release": "npm test && npm run build && npm version patch && git push upstream --tags && npm publish && npm run sync-docs"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/elastic/eui.git"
+  },
   "dependencies": {
     "brace": "^0.10.0",
     "classnames": "^2.2.5",
