Add eslint no-console rule. (#572)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,5 +12,8 @@
   "extends": "@elastic/eslint-config-kibana",
   "env": {
     "jest": true
+  },
+  "rules": {
+    "no-console": "error"
   }
 }
