Fix lint tasks and introduce prettier (#576)
* Fix lint and lint-fix tasks. Fix linting errors. Add prettier, but don't apply to eslint rules because the diff it causes will introduce too many merge conflicts for people.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,11 +9,14 @@
       }
     }
   },
-  "extends": "@elastic/eslint-config-kibana",
+  "extends": [
+    "@elastic/eslint-config-kibana",
+    "prettier"
+  ],
+  "plugins": [
+    "prettier"
+  ],
   "env": {
     "jest": true
-  },
-  "rules": {
-    "no-console": "error"
   }
 }
