--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "sync-docs": "node ./scripts/docs-sync.js",
     "build-docs": "webpack --config=src-docs/webpack.config.js",
     "build": "node ./scripts/compile-clean.js && node ./scripts/compile-eui.js && node ./scripts/compile-scss.js",
-    "lint": "eslint --cache --ignore-pattern **/*.snap.js ./src/**/*.js ./src-docs/**/*.js",
-    "lint-fix": "eslint --fix --cache --ignore-pattern **/*.snap.js ./src/**/*.js ./src-docs/**/*.js",
+    "lint": "eslint --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
+    "lint-fix": "eslint --fix --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
     "test": "npm run lint && npm run test-unit",
     "test-unit": "jest --config ./scripts/jest/config.json",
     "yo-component": "yo ./generator-eui/app/component.js",
@@ -29,6 +29,8 @@
     "brace": "^0.10.0",
     "classnames": "^2.2.5",
     "core-js": "^2.5.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
     "focus-trap-react": "^3.0.4",
     "highlight.js": "^9.12.0",
     "html": "^1.0.0",
@@ -36,6 +38,7 @@
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "numeral": "^2.0.6",
+    "prettier": "^1.11.1",
     "prop-types": "^15.6.0",
     "react-ace": "^5.5.0",
     "react-color": "^2.13.8",
