--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.6",
     "jest-cli": "^22.0.6",
+    "markdown-it": "8.4.1",
     "moment": "^2.20.1",
     "node-sass": "^4.5.3",
     "npm-run": "^4.1.2",
