--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prop-types": "^15.6.0",
     "react-ace": "^5.5.0",
     "react-color": "^2.13.8",
+    "react-datepicker": "v1.4.1",
     "react-input-autosize": "^2.2.1",
     "serve": "^6.3.1",
     "tabbable": "^1.1.0",
