--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-color": "^2.13.8",
     "react-datepicker": "v1.4.1",
     "react-input-autosize": "^2.2.1",
+    "react-virtualized": "^9.18.5",
     "serve": "^6.3.1",
     "tabbable": "^1.1.0",
     "uuid": "^3.1.0"
