Silne30/visual regression rests 521 (#630)
* Added webdriver config, testing framework, googledriver, chromedriver and iedriver config, and saucelabs configuration.

* package.json and yarn.lock changes.

* Added condition for ie only to run in CI or on windows machine.

* Added card and table sample apps to run tests against. Added configuration for webpack.

* Added dep to start dev server and then run tests and changed webdriver and webpack config to work together.

* Added jetbrains idea files to ignore

* Added baselines for chrome, ie, and FF.

* Removed old baselines and changed configurations.

* Added new baseline images for chrome and firefox.

* Added environment specific baseline snapshots.

* Changed config to use existing src-docs page and added toast test.

* Changed testing suites to use docs page. Edited table createDataStore to also be able to serve a static order for visual testing purposes.

* Changed wdio to use selenium 3.4 because of issue with selenium 3.7 and chromedriver.

* Added baseline images to npm_ignore along with other directories we don't want included. Added readme. Added script for jenkins to run tests.

* Renamed script to indicate that jenkins is to run it.

* Updated yarn.lock.

* Fixed merge conflicts.

* Added ability to check out master.

* Added javascript script to run tests against master for the current user. Also removed baseline images as the tests will run twice, the first will create the baselines.

* Added .keep file to maintain the folder structure.

* Changed the repo back to current repo.

* Moved webdriverio and nodegit to devDependencies

* refactor run-visual-tests.js into async/await

* Cleaned up the visual test code and some configs

* Use silne30/wdio-visual-regression-service#Add_Filename_To_Result for source of wdio-visual-regression-service

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
+.idea
 node_modules/
+test/spec/screenshots/baseline/**/*.png
+test/spec/screenshots/diff/**/*.png
+test/spec/screenshots/screen/**/*.png
+test/failure-screenshots/**/*.png
 
 reports/
 tmp/
