--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "module": "src",
   "types": "src/index.d.ts",
   "jsnext:main": "src",
+  "postcss": {},
   "docker_image": "node:8",
   "scripts": {
     "start": "webpack-dev-server --port 8030 --inline --hot --config=src-docs/webpack.config.js",
@@ -17,7 +18,11 @@
     "lint-fix": "eslint --fix --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
     "test": "npm run lint && npm run test-unit",
     "test-unit": "jest --config ./scripts/jest/config.json",
+    "start-test-server": "webpack-dev-server --config src-docs/webpack.config.js --port 9999",
+    "test-visual": "wdio test/wdio.conf.js",
     "yo-component": "yo ./generator-eui/app/component.js",
+    "test-visual-tests": "node ./scripts/run-visual-tests.js",
+    "start-test-server-and-visual-test": "start-server-and-test start-test-server http-get://localhost:9999 test-visual",
     "yo-doc": "yo ./generator-eui/app/documentation.js",
     "release": "npm test && npm run build && npm version patch && git push upstream --tags && npm publish && npm run sync-docs"
   },
@@ -66,8 +71,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.1.2",
+    "chai-webdriverio": "^0.4.3",
     "chalk": "^2.3.1",
     "chokidar": "^1.7.0",
+    "chromedriver": "2.37.0",
     "circular-dependency-plugin": "^4.3.0",
     "css-loader": "^0.28.7",
     "enzyme": "^3.1.0",
@@ -83,14 +91,17 @@
     "eslint-plugin-prefer-object-spread": "^1.2.1",
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.11",
+    "geckodriver": "^1.11.0",
     "glob": "^7.1.2",
     "html-loader": "^0.5.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.6",
     "jest-cli": "^22.0.6",
     "markdown-it": "8.4.1",
+    "mocha": "^5.0.4",
     "moment": "^2.20.1",
     "node-sass": "^4.5.3",
+    "nodegit": "^0.22.0",
     "npm-run": "^4.1.2",
     "pegjs": "^0.10.0",
     "postcss-cli": "^4.1.1",
@@ -112,9 +123,18 @@
     "sass-loader": "^6.0.6",
     "sass-vars-to-js-loader": "^2.0.2",
     "shelljs": "^0.8.1",
-    "sinon": "^4.0.1",
+    "sinon": "^4.4.8",
+    "start-server-and-test": "^1.1.4",
     "style-loader": "^0.19.0",
     "url-loader": "^1.0.1",
+    "wdio-chromedriver-service": "^0.1.2",
+    "wdio-iedriver-service": "^0.1.0",
+    "wdio-mocha-framework": "^0.5.13",
+    "wdio-sauce-service": "^0.4.8",
+    "wdio-selenium-standalone-service": "^0.0.10",
+    "wdio-spec-reporter": "^0.1.4",
+    "wdio-visual-regression-service": "silne30/wdio-visual-regression-service#Add_Filename_To_Result",
+    "webdriverio": "^4.12.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.2",
     "yeoman-generator": "^2.0.1",
