Include the postinstall.js script when building the npm package (#775)

--- a/.npmignore
+++ b/.npmignore
@@ -7,6 +7,9 @@ generator-eui/
 test/
 src-docs/
 
+# ignore everything in `scripts` except postinstall.js
+scripts/!(postinstall.js)
+
 .DS_Store
 .eslintcache
 .yo-rc.json
