organize (dev|peer)dependencies (#824)
* organize (dev|peer)dependencies

* move jquery to devDependencies

* move prop-types to a peerDependency

--- a/package.json
+++ b/package.json
@@ -35,23 +35,18 @@
     "brace": "^0.10.0",
     "classnames": "^2.2.5",
     "core-js": "^2.5.1",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
     "focus-trap-react": "^3.0.4",
     "highlight.js": "^9.12.0",
     "html": "^1.0.0",
-    "jquery": "^3.2.1",
     "keymirror": "^0.1.1",
     "lodash": "^3.10.1",
     "numeral": "^2.0.6",
-    "prettier": "^1.11.1",
     "prop-types": "^15.6.0",
     "react-ace": "^5.5.0",
     "react-color": "^2.13.8",
     "react-datepicker": "v1.4.1",
     "react-input-autosize": "^2.2.1",
     "react-virtualized": "^9.18.5",
-    "serve": "^6.3.1",
     "tabbable": "^1.1.0",
     "uuid": "^3.1.0"
   },
@@ -83,6 +78,7 @@
     "enzyme-adapter-react-16": "^1.0.2",
     "enzyme-to-json": "^3.3.0",
     "eslint": "^4.9.0",
+    "eslint-config-prettier": "^2.9.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.8.0",
@@ -90,6 +86,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-mocha": "^4.11.0",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.4.0",
     "file-loader": "^1.1.11",
     "geckodriver": "^1.11.0",
@@ -98,6 +95,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.6",
     "jest-cli": "^22.0.6",
+    "jquery": "^3.2.1",
     "markdown-it": "8.4.1",
     "mocha": "^5.0.4",
     "moment": "^2.20.1",
@@ -109,6 +107,8 @@
     "postcss-inline-svg": "^3.0.0",
     "postcss-loader": "^2.0.8",
     "pre-commit": "^1.2.2",
+    "prettier": "^1.11.1",
+    "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -143,6 +143,8 @@
   },
   "peerDependencies": {
     "moment": "^2.13.0",
-    "react": "^16.2.0 || ^16.2"
+    "prop-types": "^15.5.0",
+    "react": "^16.2.0 || ^16.2",
+    "react-dom": "^16.2.0 || ^16.2"
   }
 }
