--- a/package.json
+++ b/package.json
@@ -110,8 +110,8 @@
     "prettier": "^1.11.1",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "react-redux": "^5.0.6",
     "react-router": "^3.2.0",
     "react-router-redux": "^4.0.8",
@@ -144,7 +144,7 @@
   "peerDependencies": {
     "moment": "^2.13.0",
     "prop-types": "^15.5.0",
-    "react": "^16.2.0 || ^16.2",
-    "react-dom": "^16.2.0 || ^16.2"
+    "react": "^16.3",
+    "react-dom": "^16.3"
   }
 }
