--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
     "chai-webdriverio": "^0.4.3",
-    "chalk": "^2.3.1",
+    "chalk": "^2.4.1",
     "chokidar": "^1.7.0",
     "chromedriver": "2.37.0",
     "circular-dependency-plugin": "^4.3.0",
@@ -107,6 +107,7 @@
     "postcss-loader": "^2.0.8",
     "pre-commit": "^1.2.2",
     "prettier": "^1.11.1",
+    "prompt": "^1.0.0",
     "prop-types": "^15.6.0",
     "raw-loader": "^0.5.1",
     "react": "^16.3.0",
