Add a version script to auto-update the changelog during a release

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "start-test-server-and-visual-test": "start-server-and-test start-test-server http-get://localhost:9999 test-visual",
     "yo-doc": "yo ./generator-eui/app/documentation.js",
     "release": "node ./scripts/release.js",
-    "postinstall": "node ./scripts/postinstall.js"
+    "postinstall": "node ./scripts/postinstall.js",
+    "version": "node ./scripts/update-changelog-version.js"
   },
   "repository": {
     "type": "git",
