Update popover position when children contents change (#966)
* create EuiMutationObserver util; implement it on accordion and popover

* updated EuiContextMenu to trigger popover's mutation observer during height transition

* another approach to the popover conundrum

* change popover to call requestAnimationFrame while a transition may be active

* refactor EuiMutationObserver to support multiple children

* Added full MutationObserver polyfill, added tests for EuiMutationObserver

* Allow EuiPortal to be inserted at specific locations in the DOM

* Added documentation for EuiMutationObserver

* EuiPopover now watches for text changes too

* Add EuiWrappingPopover to allow non-React elements to be used as popover anchors

* changelog and some cleanup

* Add container prop to EuiPopover

* more changelog

* PR feedback

* re-worded portal docs

* Allow EuiPopover to be created with isOpen=true

* Update EuiPopover's arrow positioning

--- a/scripts/jest/config.json
+++ b/scripts/jest/config.json
@@ -17,6 +17,7 @@
     "\\.(css|less|scss)$": "<rootDir>/scripts/jest/mocks/style_mock.js"
   },
   "setupFiles": [
+    "<rootDir>/scripts/jest/setup/polyfills.js",
     "<rootDir>/scripts/jest/setup/enzyme.js",
     "<rootDir>/scripts/jest/setup/throw_on_console_error.js"
   ],
