Feature/typescript validation (#1048)
* Added typescript & tslint dependencies, updated package linting to include typescript linting and type/syntax

* remove testing file

--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "sync-docs": "node ./scripts/docs-sync.js",
     "build-docs": "webpack --config=src-docs/webpack.config.js",
     "build": "node ./scripts/compile-clean.js && node ./scripts/compile-eui.js && node ./scripts/compile-scss.js",
-    "lint": "eslint --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
-    "lint-fix": "eslint --fix --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
+    "lint": "yarn lint-es && yarn lint-ts",
+    "lint-fix": "yarn lint-es-fix && yarn lint-ts-fix",
+    "lint-es": "eslint --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
+    "lint-es-fix": "eslint --fix --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
+    "lint-ts": "tslint -c ./tslint.yaml -p ./tsconfig.json && tsc -p ./tsconfig.json",
+    "lint-ts-fix": "tslint -c ./tslint.yaml -p ./tsconfig.json --fix",
     "test": "npm run lint && npm run test-unit",
     "test-unit": "jest --config ./scripts/jest/config.json",
     "start-test-server": "webpack-dev-server --config src-docs/webpack.config.js --port 9999",
@@ -129,6 +133,8 @@
     "sinon": "^4.4.8",
     "start-server-and-test": "^1.1.4",
     "style-loader": "^0.19.0",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2",
     "url-loader": "^1.0.1",
     "wdio-chromedriver-service": "^0.1.2",
     "wdio-iedriver-service": "^0.1.0",
