Make EUIXYChart responsive using ResizeObserver (#1041)
This drops the use of native react-vis makeVisFlexible in favour of ResizeObserver to support resizing of the chart container as in kibana dashboard.

* Rename observable callback to a meaningful one

* Add responsive example

* Remove unnecessary margin from example demos

* Re-enable overflow:hidden on chart after introducing static margins

* Fix typos in example text

--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
+    "resize-observer-polyfill": "^1.5.0",
     "rimraf": "^2.6.2",
     "sass-extract": "^2.1.0",
     "sass-extract-js": "^0.3.0",
