--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "chromedriver": "2.37.0",
     "circular-dependency-plugin": "^4.3.0",
     "css-loader": "^0.28.7",
+    "cssnano": "^4.0.5",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "enzyme-to-json": "^3.3.0",
