--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
   },
   "devDependencies": {
     "@elastic/eslint-config-kibana": "^0.15.0",
-    "@types/react": "^16.0.31",
+    "@types/enzyme": "^3.1.13",
+    "@types/react": "^16.4.9",
     "autoprefixer": "^7.1.5",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.1",
