--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "sync-docs": "node ./scripts/docs-sync.js",
     "build-docs": "webpack --config=src-docs/webpack.config.js",
     "build": "node ./scripts/compile-clean.js && node ./scripts/compile-eui.js && node ./scripts/compile-scss.js",
-    "lint": "yarn lint-es && yarn lint-ts",
+    "lint": "yarn lint-es && yarn lint-ts && yarn lint-framer",
     "lint-fix": "yarn lint-es-fix && yarn lint-ts-fix",
     "lint-es": "eslint --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
     "lint-es-fix": "eslint --fix --cache --ignore-pattern \"**/*.snap.js\" \"src/**/*.js\" \"src-docs/**/*.js\"",
     "lint-ts": "tslint -c ./tslint.yaml -p ./tsconfig.json && tsc -p ./tsconfig.json",
     "lint-ts-fix": "tslint -c ./tslint.yaml -p ./tsconfig.json --fix",
+    "lint-framer": "tslint -c ./tslint.yaml -p ./src-framer/tsconfig.json",
+    "lint-framer-fix": "tslint -c ./tslint.yaml -p ./src-framer/tsconfig.json --fix",
     "test": "yarn lint && yarn test-unit",
     "test-unit": "jest --config ./scripts/jest/config.json",
     "start-test-server": "webpack-dev-server --config src-docs/webpack.config.js --port 9999",
