--- a/tslint.yaml
+++ b/tslint.yaml
@@ -2,6 +2,20 @@ extends:
   - tslint:recommended
 
 rules:
+  arrow-parens: false
+  ordered-imports: false
+  trailing-comma: [
+                    true,
+                    {
+                      "multiline": {
+                        "objects": "always",
+                        "arrays": "always",
+                        "functions": "never",
+                        "typeLiterals": "ignore"
+                      },
+                      "esSpecCompliant": true
+                    }
+                  ]
   object-literal-sort-keys: false
   interface-name: false
   no-default-export: true
