--- a/package.json
+++ b/package.json
@@ -60,30 +60,32 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.1.2",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
     "@elastic/eslint-config-kibana": "^0.15.0",
     "@types/enzyme": "^3.1.13",
     "@types/react": "^16.0.31",
     "@types/react-virtualized": "^9.18.6",
     "autoprefixer": "^7.1.5",
-    "babel-cli": "^6.26.0",
+    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.0.1",
-    "babel-jest": "^22.0.6",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-inline-react-svg": "^0.5.2",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-add-module-exports": "^1.0.0",
+    "babel-plugin-inline-react-svg": "^1.0.1",
     "babel-plugin-pegjs-inline-precompile": "^0.1.0",
-    "babel-plugin-react-docgen": "^1.8.2",
-    "babel-plugin-transform-async-generator-functions": "^6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "babel-plugin-react-docgen": "^2.0.0",
     "chai": "^4.1.2",
     "chai-webdriverio": "^0.4.3",
     "chalk": "^2.4.1",
     "chokidar": "^1.7.0",
     "chromedriver": "2.37.0",
-    "circular-dependency-plugin": "^4.3.0",
+    "circular-dependency-plugin": "^5.0.2",
     "css-loader": "^0.28.7",
     "cssnano": "^4.0.5",
     "enzyme": "^3.1.0",
@@ -103,10 +105,9 @@
     "file-loader": "^1.1.11",
     "geckodriver": "^1.11.0",
     "glob": "^7.1.2",
-    "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
-    "jest": "^22.0.6",
-    "jest-cli": "^22.0.6",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
+    "jest-cli": "^23.6.0",
     "jquery": "^3.2.1",
     "markdown-it": "8.4.1",
     "mocha": "^5.0.4",
@@ -142,6 +143,7 @@
     "style-loader": "^0.19.0",
     "tslint": "^5.11.0",
     "typescript": "^2.9.2",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^1.0.1",
     "wdio-chromedriver-service": "^0.1.2",
     "wdio-iedriver-service": "^0.1.0",
@@ -151,8 +153,9 @@
     "wdio-spec-reporter": "^0.1.4",
     "wdio-visual-regression-service": "silne30/wdio-visual-regression-service#Add_Filename_To_Result",
     "webdriverio": "^4.12.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.2",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "yeoman-generator": "^2.0.1",
     "yo": "^2.0.0"
   },
