build and publish lib and es directories (#1292)
* build and publish lib and es directories

* remove unrelated debugging code

* flip default babel config to commonjs modules

* PR feedback

* resolve src-docs changelog import

* more PR feedback

--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "description": "Elastic UI Component Library",
   "version": "4.8.0",
   "main": "lib",
-  "module": "src",
+  "module": "es",
   "types": "src/index.d.ts",
-  "jsnext:main": "src",
   "postcss": {},
   "docker_image": "node:8",
   "scripts": {
