--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ tmp/
 dist/
 lib/
 es/
+types/
 .idea
 .vscode/
 .DS_Store
@@ -17,3 +18,4 @@ es/
 .yo-rc.json
 npm-debug.log
 yarn-error.log
+eui.d.ts
