--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "url": "https://github.com/elastic/eui.git"
   },
   "dependencies": {
+    "@types/numeral": "^0.0.25",
     "classnames": "^2.2.5",
     "core-js": "^2.5.1",
     "focus-trap-react": "^3.0.4",
@@ -75,6 +76,7 @@
     "@types/lodash": "^4.14.116",
     "@types/react": "^16.3.0",
     "@types/react-virtualized": "^9.18.6",
+    "@types/uuid": "^3.4.4",
     "autoprefixer": "^7.1.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^8.0.1",
