--- a/.eslintignore
+++ b/.eslintignore
@@ -7,6 +7,6 @@ types
 eui.d.ts
 **/*.snap.js
 **/assets/**/*.js
+package.json
 src-docs/src/views/icon/icon_example.js
-src-framer/code/canvas.tsx
 packages/react-datepicker/examples
