Add codesandbox links to our documentation (#2728)
Sandbox links are now part of our docs system.

--- a/package.json
+++ b/package.json
@@ -119,6 +119,7 @@
     "chokidar": "^1.7.0",
     "chromedriver": "^77.0.0",
     "circular-dependency-plugin": "^5.0.2",
+    "codesandbox": "^2.1.11",
     "core-js": "^2.5.1",
     "cross-env": "^5.2.0",
     "css-loader": "^0.28.7",
