--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-virtualized": "^9.21.2",
     "resize-observer-polyfill": "^1.5.0",
     "tabbable": "^3.0.0",
+    "text-diff": "^1.0.1",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
