--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "@types/numeral": "^0.0.25",
     "@types/react-beautiful-dnd": "^12.1.2",
     "@types/react-input-autosize": "^2.0.2",
-    "@types/react-virtualized": "^9.18.7",
+    "@types/react-virtualized-auto-sizer": "^1.0.0",
+    "@types/react-window": "^1.8.1",
     "chroma-js": "^2.0.4",
     "classnames": "^2.2.5",
     "highlight.js": "^9.12.0",
@@ -66,7 +67,8 @@
     "react-focus-lock": "^1.17.7",
     "react-input-autosize": "^2.2.2",
     "react-is": "~16.3.0",
-    "react-virtualized": "^9.21.2",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "resize-observer-polyfill": "^1.5.0",
     "tabbable": "^3.0.0",
     "text-diff": "^1.0.1",
@@ -101,8 +103,8 @@
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
     "autoprefixer": "^7.1.5",
-    "axe-core": "^3.3.2",
-    "axe-puppeteer": "^1.0.0",
+    "axe-core": "^3.5.4",
+    "axe-puppeteer": "^1.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
