Created Playground utility (#3681)
* tabs for Examples-Guidelines-Playground

* horizontal rule only when more than one tab

* moved text scaling guidelines

* restored top text

* used router

* removed redundant code

* removed playground for button example

* setup redirection for old guidelines

* basic palyground setup

* table introduced

* palyground fully working for EuiButton

* resolved merge conflicts

* removed unnecessary 'brace imports'

* fixed duplicate key issue, removed some redundant code

* used EuiSwitch and compressed forms

* indentation fix

* form controlls set to full width, min row height set to 42px

* updated for ghostBackground

* created new class for ghost backGround and included playground.scss in main file

* updated variable name

* removed commented code

* Update routes.js

* removed commented code

* fixed prettier issue

* Update src-docs/src/services/playground/_knobs.scss

Co-authored-by: Elizabet Oliveira <elizabet.oliveira@elastic.co>

* Update src-docs/src/services/playground/knobs.js

Co-authored-by: Elizabet Oliveira <elizabet.oliveira@elastic.co>

* created seperate file for compiler.Scss and prettierFixes

* added 16px padding

* Design details

* removed commented code

* Update src-docs/src/playground.js

Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

* restructured

* removed leading space

* used html-formatter for snippet

* used Text field for IconSide

* pass iconType only when correct type is selected

Co-authored-by: Elizabet Oliveira <elizabet.oliveira@elastic.co>
Co-authored-by: Greg Thompson <thompson.glowe@gmail.com>

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "classnames": "^2.2.5",
     "highlight.js": "^9.12.0",
     "html": "^1.0.0",
+    "html-format": "^1.0.1",
     "keymirror": "^0.1.1",
     "lodash": "^4.17.11",
     "numeral": "^2.0.6",
@@ -67,6 +68,7 @@
     "react-focus-lock": "^1.17.7",
     "react-input-autosize": "^2.2.2",
     "react-is": "~16.3.0",
+    "react-view": "^2.3.2",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "resize-observer-polyfill": "^1.5.0",
