Break up release.js (#3723)
* Switch release.js to use arguments instead of env vars

* Switch MFA code back to env var so it doesn't leak in CI logs

* Update job definition to use --type arg

* Support breaking up release steps with args

* Break release up to fetch time-sensitive MFA token right before publish

* Strip whitespace from each step

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

Co-authored-by: Chandler Prall <chandler.prall@gmail.com>

--- a/.ci/jobs/elastic+eui+npm-publish.yml
+++ b/.ci/jobs/elastic+eui+npm-publish.yml
@@ -34,6 +34,8 @@
           npm install -g yarn
           yarn
 
+          npm run release -- --type=${version_type} --steps=test,build,version,tag
+
           set +x
 
           export VAULT_TOKEN=$(vault write -field=token auth/approle/login role_id="$VAULT_ROLE_ID" secret_id="$VAULT_SECRET_ID")
@@ -49,5 +51,4 @@
 
           set -x
 
-          export VERSION_TYPE=${version_type}
-          npm run release
+          npm run release -- --type=${version_type} --steps=publish,docs
