--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "@types/uuid": "^3.4.4",
     "@typescript-eslint/eslint-plugin": "^3.2.0",
     "@typescript-eslint/parser": "^3.2.0",
+    "argparse": "^1.0.10",
     "autoprefixer": "^7.1.5",
     "axe-core": "^3.5.4",
     "axe-puppeteer": "^1.1.0",
