Add ssh keys so new tags can be pushed to Github from Jenkins (#3740)
* Add ssh keys so new tags can be pushed to Github

* Need a vault token before we can pull secrets

--- a/.ci/jobs/elastic+eui+npm-publish.yml
+++ b/.ci/jobs/elastic+eui+npm-publish.yml
@@ -40,6 +40,9 @@
 
           export VAULT_TOKEN=$(vault write -field=token auth/approle/login role_id="$VAULT_ROLE_ID" secret_id="$VAULT_SECRET_ID")
 
+          # add ssh keys to ensure tags can push to Github
+          /usr/local/bin/ssh-add-from-vault elastic
+
           # write npm auth to .npmrc
           NPM_TOKEN=$(vault read -field=token secret/jenkins-ci/npmjs/elasticmachine)
           echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
